force-app/main/default/src/objects/PJN_Merge_Tool_Setting__mdt/PJN_Merge_Tool_Setting__mdt.object-meta.xml
<CustomObject>
    <description>App: Patient Journey Navigator
Impacted Functionality: Merge Tool
Purpose: Defines the child records that will be displayed and merged as part of the Patient Merge Tool.
Metadata Relationship(s): --
Created by Mavens: Yes</description>
    <label>Merge Tool Setting</label>
    <pluralLabel>Merge Tool Settings</pluralLabel>
</CustomObject>