force-app/main/default/src/objects/PJN_Merge_Tool_Setting__mdt/fields/PJN_Child_SObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Child_SObject_API_Name__c</fullName>
    <description>API Name of the care plan child object.</description>
    <inlineHelpText>API Name of the care plan child object</inlineHelpText>
    <label>Child SObject API Name</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>