force-app/main/default/src/objects/PJN_Merge_Tool_Setting__mdt/fields/PJN_Field_API_Name_to_Account__c.field-meta.xml
<CustomField>
    <fullName>PJN_Field_API_Name_to_Account__c</fullName>
    <description>API Name of the field that defines the relationship with the account.</description>
    <inlineHelpText>API Name of the field that defines the relationship with the account.</inlineHelpText>
    <label>Field API Name to Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>