force-app/main/default/src/objects/PJN_Merge_Tool_Setting__mdt/fields/PJN_Field_API_Name_To_Care_Plan__c.field-meta.xml
<CustomField>
    <fullName>PJN_Field_API_Name_To_Care_Plan__c</fullName>
    <description>API Name of the field that defines the relationship with the care plan.</description>
    <inlineHelpText>API Name of the field that defines the relationship with the care plan.</inlineHelpText>
    <label>Field API Name To Care Plan</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>