force-app/main/default/src/objects/PJN_Merge_Tool_Setting__mdt/fields/PJN_Field_List__c.field-meta.xml
<CustomField>
    <fullName>PJN_Field_List__c</fullName>
    <description>List of fields to be displayed.</description>
    <inlineHelpText>List of fields to be displayed.</inlineHelpText>
    <label>Field List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>