force-app/main/default/src/objects/PJN_Merge_Tool_Setting__mdt/listViews/PJN_All.listView-meta.xml
<ListView>
    <fullName>PJN_All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PJN_Child_SObject_API_Name__c</columns>
    <columns>PJN_Field_API_Name_To_Care_Plan__c</columns>
    <columns>PJN_Field_API_Name_to_Account__c</columns>
    <columns>PJN_Field_List__c</columns>
    <columns>PJN_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>